--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp-retry==2.8.3
 aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.2.0
+astroid==3.2.2
 async-timeout==4.0.2
 attrs==22.2.0
 autopep8==2.0.0
@@ -11,6 +12,7 @@ certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
 debugpy==1.8.1
+dill==0.3.8
 distlib==0.3.7
 distro==1.9.0
 dnspython==2.2.1
@@ -27,9 +29,11 @@ httpcore==1.0.2
 httpx==0.26.0
 idna==3.4
 importlib-metadata==5.1.0
+isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mccabe==0.7.0
 multidict==6.0.4
 numpy==1.26.4
 openai==0.25.0
@@ -43,6 +47,7 @@ pycodestyle==2.10.0
 pydantic==2.6.1
 pydantic-core==2.16.2
 PyJWT==2.6.0
+pylint==3.2.2
 pymongo==4.3.3
 python-dateutil==2.8.2
 python-dotenv==0.21.0
@@ -53,6 +58,7 @@ six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.30
 tomli==2.0.1
+tomlkit==0.12.5
 tqdm==4.64.1
 twilio==8.13.0
 types-pytz==2022.6.0.1
